Fixed layout spacing

--- a/media/button/main.css
+++ b/media/button/main.css
@@ -52,69 +52,17 @@ a.button{
 .select{
   background-color: var(--vscode-input-background);
   color: var(--vscode-input-foreground);
-  float: right;
-  width: 110px;
+  width: 80px;
+}
+
+a {
+  text-decoration: none;
+  outline: none;
 }
 
 .check {
   background: green;
 }
-
-/* Dropdown Button */
-.dropbtn {
-  background-color: var(--vscode-button-background);
-  color: var(--vscode-button-foreground);
-  padding: var(--input-padding-vertical) var(--input-padding-horizontal);
-  font-size: var(--vscode-editor-font-size);
-  border: none;
-  margin: 0 auto;
-  width: 100%;
-  text-align: center;
-}
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-  position: relative;
-  display: inline-block;
-  margin: 0 auto;
-  width: 100%;
-  text-align: center;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-  display: none;
-  position: relative;
-  background-color: #7f7f7f;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-  margin: 0 auto;
-  width: 100%;
-  text-align: center;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  margin: 0 auto;
-  width: 100%;
-  text-align: center;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd;}
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {display: block;}
-
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
-
-
-
 
 .switch {
   position: relative;
@@ -193,6 +141,7 @@ input:checked + .slider:before {
 .right{
   float: right;
   width: 50%;
+  margin: 0px 30px;
 }
 
 /* Clear floats after the columns */
